--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-change-name-of-the-package",
+  "name": "@compository/flows-composer",
   "version": "0.0.1",
   "description": "TODO: change description",
   "author": "guillem.cordoba@gmail.com",
@@ -10,8 +10,8 @@
     "start": "concurrently --kill-others \"npm:start-ui\" \"npm:start-holochain\"",
     "start-ui": "CONDUCTOR_URL=ws://localhost:8888 concurrently -k --names tsc,dev-server \"npm run build-watch\" \"web-dev-server --config demo/web-dev-server.config.mjs\"",
     "start-holochain": "RUST_LOG=warn hc s generate -r=8888 ../zome/workdir/happ/sample-happ.happ network -b https://bootstrap-staging.holo.host quic",
-    "build": "rimraf dist && tsc",
-    "build-watch": "tsc --watch",
+    "build": "rimraf dist && rollup -c rollup.config.js",
+    "build-watch": "rollup -c rollup.config.js -w",
     "test": "tsc && web-test-runner --coverage --puppeteer",
     "test-debug": "tsc && DEBUG=true web-test-runner --coverage --puppeteer",
     "test-watch": "web-test-runner --watch --puppeteer",
@@ -26,9 +26,16 @@
   },
   "dependencies": {
     "@holochain-open-dev/common": "git+https://github.com/holochain-open-dev/common.git#ui-build",
-    "@holochain/conductor-api": "0.0.2",
+    "@holochain/conductor-api": "0.0.4",
     "lit-element": "^2.4.0",
-    "lit-html": "^1.3.0"
+    "lit-html": "^1.3.0",
+    "regenerator-runtime": "^0.13.7",
+    "rete": "^1.4.5-rc.1",
+    "rete-connection-plugin": "^0.9.0",
+    "rete-dock-plugin": "^0.2.1",
+    "rete-stage0-render-plugin": "^0.2.14",
+    "rete-vue-render-plugin": "^0.5.1",
+    "rollup": "^2.49.0"
   },
   "devDependencies": {
     "@open-wc/demoing-storybook": "^2.0.0",
@@ -36,7 +43,8 @@
     "@open-wc/testing": "^2.0.0",
     "@open-wc/testing-karma": "^3.0.0",
     "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-replace": "^2.4.2",
+    "@rollup/plugin-typescript": "^8.2.1",
     "@types/node": "13.11.1",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
@@ -55,9 +63,12 @@
     "holochain-ui-test-utils": "github:guillemcordoba/holochain-ui-test-utils",
     "husky": "^1.0.0",
     "lint-staged": "^10.0.0",
+    "postcss": "^8.3.0",
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
     "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-postcss-lit": "^1.0.1",
     "tslib": "^1.11.0",
     "typescript": "~3.9.0",
     "web-component-analyzer": "^1.1.6"
